# qbitbot

./: .env.tmplt  Cargo.toml  qbitbot.service
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/bot/: commands.rs  config.rs  messages.rs  mod.rs  notifier.rs  qb_chat.rs  qb_client.rs  qbot.rs  rutebot_mock.rs
src/bot/commands/: aux.rs  cmd_list.rs  download.rs  list.rs  mod.rs  pause.rs  pause_resume.rs  qdownload.rs  qlist.rs  resume.rs  simple.rs
tests/: .env_tests  common.rs  test_complex.rs  test_qb_chat.rs  test_simple.rs
tests/docker_qb/: docker-compose.yml  start.sh  stop.sh
