[package]
name = "qbitbot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies", "default-tls"] }
tokio = { version = "1", features = ["full"] }
rutebot = "0.7"
anyhow = "1.0"
dotenv = "0"
futures-util = "0.3"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0"
log = "0.4"
pretty_env_logger = "0.4"
fure = "0"