[package]
name = "qbitbot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "cookies", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rutebot = { version = "0.7.5", default-features = false, features = ["rustls-tls"] }
anyhow = "1.0"
dotenv = "0"
futures-util = "0.3"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0"
log = "0.4"
pretty_env_logger = "0.4"
fure = "0"
itertools = "0.10"
async-trait = "0.1"